-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
None
-
OSX 10.4.4, MacBook Pro Retina
-
1929fee8e17e9ca66e7fe08faa9ed9fa7fdbb127
Problem: (see attached QML and animated GIF)
- Setup a ListView which can be controlled via keyboard arrows keys
- Use two finger flick and move visible area a few pixel
- Now try to navigate with cursor keys
- Instead of smoothly scrolling at bounds the current item gets invisible
Note:
- The problem does not occur when I press the touchpad and drag
- If the problem occurs and I press touchpad, the problem disappears (of course that's not a workaround for a user)
- I also noticed that onMovementEnded is not emitted when using the touchpad the described way.
- relates to
-
QTBUG-55871 Flickable::movementEnded() not emitted when dragging on macOS
-
- Closed
-
-
QTBUG-101268 ListView does not preserve its relative scrollbar position when window is restored down on Windows if height of ListView.header changes dynamically
-
- Closed
-
For Gerrit Dashboard: QTBUG-47151 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
121317,3 | Flickable: ensure movementEnded after wheel/trackpad flick | 5.5 | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
147843,9 | Flickable: ensure movementEnded after wheel/trackpad flick | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |