src/quick/items/qquickflickable_p.h
@@ -253,6 +253,7 @@ protected Q_SLOTS:
     void movementStarting();
     void movementEnding();
     void movementEnding(bool hMovementEnding, bool vMovementEnding);
+    void velocityTimelineCompleted();
     void timelineCompleted();
 
 protected:
